<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@drawable/background"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="119dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="33dp"
        app:srcCompat="@drawable/topbun" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp">

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beef" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lamb" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ostrich" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="419dp"
        android:text="@string/prosciutto" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="315dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="357dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/asiago" />

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/creme" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="247dp"
        android:layout_height="wrap_content"

        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="331dp"
        android:text="@string/sauce"
        android:textAlignment="center" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="285dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="401dp"
        android:layout_marginBottom="295dp"
        android:max="14"
        />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="281dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="199dp"
        app:srcCompat="@drawable/bottombun" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="207dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="135dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>